--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "fs-extra": "^8.1.0",
     "html-to-text": "^5.1.1",
     "html-webpack-plugin": "4.0.0-beta.11",
+    "i": "^0.3.6",
     "identity-obj-proxy": "3.0.0",
     "jalaliday": "^2.3.0",
     "jest": "24.9.0",
@@ -44,6 +45,7 @@
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.19",
     "mini-css-extract-plugin": "0.9.0",
+    "npm": "^6.14.11",
     "optimize-css-assets-webpack-plugin": "5.0.3",
     "pnp-webpack-plugin": "1.6.4",
     "postcss-flexbugs-fixes": "4.1.0",
@@ -56,6 +58,7 @@
     "react-app-polyfill": "^1.0.6",
     "react-dev-utils": "^10.2.1",
     "react-dom": "^16.13.1",
+    "react-elasticsearch": "^2.0.0",
     "react-froala-wysiwyg": "^3.2.1-1",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.2.0",
